# cpp20-modules-exploration

./: CMakeLists.txt  README.md  main.cpp
libA/: A.cppm  CMakeLists.txt
libB/: B.cppm  CMakeLists.txt
